welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: value =< is not a member of Int
  if ((Math.abs(100-n) =< 10) || (Math.abs(200-n) =< 10)) {
                       ^nearHundred:2: error: value =< is not a member of Int
  if ((Math.abs(100-n) =< 10) || (Math.abs(200-n) =< 10)) {
                                                  ^